@@ -10,4 +10,5 @@
 	<Include file="Libs\AceBucket-3.0\AceBucket-3.0.xml"/>   
 	<Include file="Libs\AceTimer-3.0\AceTimer-3.0.xml"/>   
 	<Include file="Libs\lib-st\lib-st.xml"/>
+	<Script file="Libs\LibPeriodicTable-3.1\LibPeriodicTable-3.1.lua"/>
 </Ui>
